provision/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phihoang-student-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phihoang
  template:
    metadata:
      labels:
        app: phihoang
    spec:
      containers:
        - name: cont
          image: phihdn/nc_student
          ports:
            - containerPort: 9090
              name: web
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "75Mi"
              cpu: "75m"
